removed unused code
FossilOrigin-Name: a24b1475f654772fec5374fb8f36d590a0e9acff8dbf9f0a22d3aefc08590934

--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -440,19 +440,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
       </packing>
     </child>
     <child>
-      <object class="GtkButton" id="btnaskevents">
-        <property name="label" translatable="yes">Ask for _events</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="use_underline">True</property>
-        <signal name="clicked" handler="Execute_Order" object="btnaskevents" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">10</property>
-      </packing>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
