fixed sorting crew members in schools
FossilOrigin-Name: 99234f7c5d5c01df9bc017cf163db275dbc216b63a44b78b72b5a015d8a131c6

--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -486,6 +486,8 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
     <columns>
       <!-- column-name gchararray1 -->
       <column type="gchararray"/>
+      <!-- column-name guint1 -->
+      <column type="guint"/>
     </columns>
   </object>
   <object class="GtkListStore" id="crewlist1">
